Kubernetes/solr.yaml
apiVersion: v1
kind: Service
metadata:
  name: solr
spec:
  selector:
      app: solr
  ports:
    - protocol: TCP
      port: 8983

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: solr
spec:
  selector:
    matchLabels:
      app: solr
  replicas: 1
  template:
    metadata:
      labels:
        app: solr
        ID: "11203"
    spec:
      containers:
        - name: solr
          image: solr:7.3.1
          command: []
          resources:
            limits:
              memory: 2048Mi
          stdin: true
          tty: true
          ports:
          - containerPort: 8983
          volumeMounts:
          - name: solr-data
            mountPath: /opt/solr/server/solr/mycores
      volumes:
           - name: solr-data
             persistentVolumeClaim:
               claimName: solr-data
