Kubernetes/okm-headstart.yaml
apiVersion: v1
kind: Service
metadata:
  name: okm-headstart
spec:
  selector:
      app: okm-headstart
  ports:
    - protocol: TCP
      port: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: okm-headstart
spec:
  selector:
    matchLabels:
      app: okm-headstart
  replicas: 1
  template:
    metadata:
      labels:
        app: okm-headstart
        ID: "15863"
    spec:
      containers:
      - name: okm-headstart
        image: ghcr.io/acdh-oeaw/linkedcat-deployment/okm-headstart:latest
        command: []
        args: ["/usr/bin/supervisord"]
        resources:
          limits:
            memory: 2048Mi
        stdin: true
        tty: true
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/server/preprocessing/conf/config_local.ini
          name: config-local-ini
          subPath: ./config_local.ini
        - mountPath: /var/www/config.js
          name: config-js
          subPath: ./config.js
        - mountPath: /var/www/webpack.config.js
          name: webpack-config-js
          subPath: ./webpack.config.js
        - mountPath: /etc/supervisor/conf.d/supervisord.conf
          name: supervisor-config
          subPath: ./supervisord.conf
      imagePullSecrets:
      - name: ghcr.io
      volumes:
          - name: config-local-ini
            configMap:
              name: config-local-ini
          - name: config-js
            configMap:
              name: config-js
          - name: webpack-config-js
            configMap:
              name: webpack-config-js
          - name: supervisor-config
            configMap:
              name: supervisor-config


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: okm-headstart
spec:
  rules:
    - host: linkedcat.acdh.oeaw.ac.at
      http:
        paths:
          - backend:
              service:
                name: okm-headstart
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - linkedcat.acdh.oeaw.ac.at
